# erikslund-solo-pool

./: .gitattributes  .gitignore  README.md
.github/workflows/: cpp.yml  e2e.yml  python.yml
conf/: pool.schema.json  pool.yml
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile
cpp/conf/: pool.yml
cpp/docker/: Dockerfile  build-entrypoint.sh  clang-tidy.sh  cppcheck.sh  failover-pool.yml  failover-test.sh  regtest.yml  smoketest.sh
cpp/src/: main.cpp
cpp/src/api/: http_server.cpp  http_server.hpp  metrics.cpp  metrics.hpp  snapshot.hpp
cpp/src/bitcoin/: address.cpp  address.hpp  block_template.cpp  block_template.hpp  coinbase.cpp  coinbase.hpp  network.hpp  rpc_client.cpp  rpc_client.hpp  rpc_endpoint.hpp  serialize.hpp
cpp/src/core/: config.cpp  config.hpp  crash.cpp  crash.hpp  errors.hpp  logging.cpp  logging.hpp  version.hpp
cpp/src/net/: proxy_protocol.cpp  proxy_protocol.hpp  server.cpp  server.hpp  socket_connection.cpp  socket_connection.hpp  zmq_subscriber.cpp  zmq_subscriber.hpp
cpp/src/pool/: pool.cpp  pool.hpp
cpp/src/stats/: hashrate.hpp  poolstatus.cpp  poolstatus.hpp
cpp/src/stratum/: job.cpp  job.hpp  message.cpp  message.hpp  session.cpp  session.hpp
cpp/src/util/: base58.cpp  base58.hpp  bech32.cpp  bech32.hpp  bytes.hpp  difficulty.cpp  difficulty.hpp  endian.hpp  hex.cpp  hex.hpp  merkle.cpp  merkle.hpp  sha256.cpp  sha256.hpp  uint256.cpp  uint256.hpp  url.cpp  url.hpp  varint.cpp  varint.hpp
cpp/tests/: bench_validate.cpp  test_address.cpp  test_base58.cpp  test_bech32.cpp  test_bitcoin_adversarial.cpp  test_block_template.cpp  test_coinbase.cpp  test_config.cpp  test_config_adversarial.cpp  test_difficulty.cpp  test_endian.cpp  test_fastblock.cpp  test_hashrate.cpp  test_hex.cpp  test_http.cpp  test_http_adversarial.cpp  test_job.cpp  test_logging.cpp  test_main.cpp  test_merkle.cpp  test_message.cpp  test_message_adversarial.cpp  test_metrics.cpp  test_pool.cpp  test_poolstatus.cpp  test_proxy_protocol.cpp  test_rpc.cpp  test_rpc_failover.cpp  test_rpc_protocol.cpp  test_serialize_height.cpp  test_server.cpp  test_session.cpp  test_session_adversarial.cpp  test_sha256.cpp  test_socket_connection.cpp  test_uint256.cpp  test_util_adversarial.cpp  test_varint.cpp
deploy/: bitcoin.conf  docker-compose.cpp.bitcoind.yml  docker-compose.cpp.ha.yml  docker-compose.cpp.yml  docker-compose.python.bitcoind.yml  docker-compose.python.yml  haproxy.cfg  setup.sh
deploy/helm/erikslund-pool/: .helmignore  Chart.yaml  values.yaml
deploy/helm/erikslund-pool/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service-api.yaml  service-stratum.yaml  serviceaccount.yaml  servicemonitor.yaml
python/: .dockerignore  Dockerfile  e2e_regtest.sh  erikslund_pool.example.yml  failover-test.sh  pyproject.toml
python/erikslund_pool/: __init__.py  __main__.py  coinbase.py  config.py  constants.py  dashboard.py  exceptions.py  hashrate.py  logging_config.py  main.py  merkle.py  metrics.py  pool.py  poolstatus.py  proxy_protocol.py  rpc.py  stratum.py  util.py  work.py
python/erikslund_pool/routers/: __init__.py  stats.py
python/erikslund_pool/tests/: __init__.py  base.py
python/erikslund_pool/tests/functional/: __init__.py  test_api.py  test_config.py  test_config_adversarial.py  test_job.py  test_rpc.py
python/erikslund_pool/tests/scenario/: __init__.py  test_share_to_block.py
python/erikslund_pool/tests/unit/: __init__.py  test_block_spool.py  test_cli.py  test_coinbase.py  test_dashboard.py  test_dashboard_adversarial.py  test_fastblock.py  test_hashrate.py  test_keepalive.py  test_logging.py  test_main.py  test_merkle.py  test_metrics.py  test_pool_adversarial.py  test_pool_helpers.py  test_poolstatus.py  test_poolstatus_adversarial.py  test_proxy_protocol.py  test_rpc_adversarial.py  test_rpc_client.py  test_rpc_failover.py  test_settings.py  test_stratum_adversarial.py  test_stratum_parse.py  test_stratum_session.py  test_user_stats_registry.py  test_util.py  test_util_adversarial.py  test_work_adversarial.py  test_work_dedup.py
tools/bench/: .gitattributes  README.md  bench.yml  bench_server.sh  blockbench.py  blocksubmit.sh  conn-bench.yml  connscale.py  connscale.sh  ft-bench.yml  ft-mine.yml  mine.yml  remote_bench.sh  run_bench.sh  stratum_bench.py  sweep.sh  zmq-bench.yml  zmqbench.sh  zmqlatency.py
tools/fake-bitcoind/: fakebitcoind.py  pyproject.toml
tools/miner/: miner.py  pyproject.toml
tools/regtest/: .gitattributes  Dockerfile.bitcoind  bitcoin.conf  docker-compose.yml  failover-pool.yml  failover-test.sh
tools/sv2-miner/: pyproject.toml  sv2_miner.py
