[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erikslund-pool"
version = "0.1.0"
description = "Single-process solo Bitcoin Stratum mining pool"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.34",
    "uvloop>=0.22; platform_system != 'Windows'",
    "msgspec>=0.19",
    "pyzmq>=26",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["httpx>=0.27"]

[project.scripts]
erikslund_pool = "erikslund_pool.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["erikslund_pool*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
strict = true
files = ["erikslund_pool"]
exclude = "tests/"

[tool.coverage.run]
source = ["erikslund_pool"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
