[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erikslund-miner"
version = "0.1.0"
description = "Stratum v1 CPU test miner that drives erikslund-pool end to end"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
erikslund-miner = "miner:main"

[tool.setuptools]
py-modules = ["miner"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
